Fixed not showing lazy modules after loaded. Added call cdr.

--- a/src/MyLiverpool.Web.WebApiNext/ClientApp/src/app/lazy-modules/navbar-menu/components/navbar-menu.component.scss
+++ b/src/MyLiverpool.Web.WebApiNext/ClientApp/src/app/lazy-modules/navbar-menu/components/navbar-menu.component.scss
@@ -11,7 +11,6 @@ a:hover {
 div {
     display: flex;
     height: 100%;
-    margin-right: 10px;
 }
 
 mat-icon {
